# ctext_decoder

./: Cargo.toml  LICENSE  README.md
src/: charset.rs  decode_block.rs  decoder.rs  encoder.rs  encoding.rs  lib.rs  tests.rs
src/charsets/: gb_2312.rs  iso_8859.rs  jis_x0201.rs  jis_x0208.rs  ks_c5601.rs  mod.rs  tests.rs
src/charsets/create_charsets/: gb_2312-get.py  iso_8859-get.py  jis_x0201-get.py  jis_x0208-get.py  ks_c5601-get.py
src/charsets/create_charsets/webpages/gb_2312/: master.html
src/charsets/create_charsets/webpages/gb_2312/A/: A1.html  A2.html  A3.html  A4.html  A5.html  A6.html  A7.html  A8.html  A9.html  AA.html  AB.html  AC.html  AD.html  AE.html  AF.html
src/charsets/create_charsets/webpages/gb_2312/B/: B0.html  B1.html  B2.html  B3.html  B4.html  B5.html  B6.html  B7.html  B8.html  B9.html  BA.html  BB.html  BC.html  BD.html  BE.html  BF.html
src/charsets/create_charsets/webpages/gb_2312/C/: C0.html  C1.html  C2.html  C3.html  C4.html  C5.html  C6.html  C7.html  C8.html  C9.html  CA.html  CB.html  CC.html  CD.html  CE.html  CF.html
src/charsets/create_charsets/webpages/gb_2312/D/: D0.html  D1.html  D2.html  D3.html  D4.html  D5.html  D6.html  D7.html  D8.html  D9.html  DA.html  DB.html  DC.html  DD.html  DE.html  DF.html
src/charsets/create_charsets/webpages/gb_2312/E/: E0.html  E1.html  E2.html  E3.html  E4.html  E5.html  E6.html  E7.html  E8.html  E9.html  EA.html  EB.html  EC.html  ED.html  EE.html  EF.html
src/charsets/create_charsets/webpages/gb_2312/F/: F0.html  F1.html  F2.html  F3.html  F4.html  F5.html  F6.html  F7.html  (+7 more)
